역경매 제외 코드 리팩토링